--- a/examples/core-aam/example.html
+++ b/examples/core-aam/example.html
@@ -6,7 +6,7 @@
   </div>
 
   <h1>Navigation:</h1>
-  <div role='navigatation' id='navigation_test'>
+  <div aria-label='cool nav' role='navigatation' id='navigation_test'>
     content
   </div>
 
